--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "ug.co.lion.lionmobile"
@@ -19,12 +19,9 @@ android {
     }
 }
 
-// add external respository url in addition to having
-// your preferred repository....This is for Poly-Picker test..the whole repositories thing
 repositories {
-    // for downloading polypicker dependency cwac-camera
     maven {
-        url "https://repo.commonsware.com.s3.amazonaws.com"
+        url "https://s3.amazonaws.com/repo.commonsware.com"
     }
 
     // for downloading poly-picker now we are using jitpack.
@@ -35,22 +32,23 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:23.4.0'
+    implementation 'com.android.support:design:23.4.0'
+    implementation 'com.android.support:support-v4:23.4.0'
+    implementation 'com.android.support:cardview-v7:23.4.0'
+    implementation 'com.android.support:recyclerview-v7:23.4.0'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:2.0.1'
 
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
-    compile ('com.github.ganfra:material-spinner:1.1.0'){
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation('com.github.ganfra:material-spinner:1.1.0'){
         exclude group: 'com.nineoldandroids', module: 'library'
         exclude group: 'com.android.support', module: 'appcompat-v7'
     }
-    compile 'com.github.jaydeepw:poly-picker:v1.0.22'
-    compile 'net.i2p.android.ext:floatingactionbutton:1.10.0'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.github.jaydeepw:poly-picker:v1.0.22'
+    implementation 'net.i2p.android.ext:floatingactionbutton:1.10.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
 
 }
